--- a/firstPush.html
+++ b/firstPush.html
@@ -12,8 +12,8 @@ content="width=device-width, initial-scale=1.0" >
 </head>
 
 <body>
-	<h1>Guy na so</h1>
 	<h2>Hey Git</h2>
+	<h1>Guy no be so</h1>
 	
 	<h3>Guess who just dropped in?</h3>
 	<h4>yah man</h4>
